syntax = "proto3";


option go_package="api/commerce/v1";

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string imageUrl = 5;
  string aisle = 6;
}

message ProductWithQuantity {
  Product product = 1;
  int32 quantity = 2;
}

message ShoppingCart {
  string id = 1;
  repeated ProductWithQuantity products = 2;
  enum ShoppingCartStatus {
    ACTIVE = 0;
    COMPLETED = 1;
    CANCELLED = 2;
  }
  ShoppingCartStatus status = 3;
  double total_price = 4;
}

message Order {
  string id = 1;
  ShoppingCart shopping_cart = 2;
  string customer_name = 3;
  string delivery_address = 4;
  string delivery_instructions = 5;
  int64 order_placed_date = 6;
  int64 estimated_delivery_date = 7;
}

message StoreSection {
  string id = 1;
  string name = 2;
  int32 aisle_number = 3;
}


// -----------------

message ProductListRequest {
}

message ProductListResponse {
  repeated Product products = 1;
}

service Store {
  rpc FetchProducts(ProductListRequest) returns (ProductListResponse);
}
